Antlr/Myll/MyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/sor/myll/Antlr/MyParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Myll {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class MyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		COMMENT=1, STRING_LIT=2, CHAR_LIT=3, ARROW_STAR=4, DOT_STAR=5, PTR_TO_ARY=6, 
		TRP_POINT=7, DBL_POINT=8, DBL_LBRACK=9, DBL_RBRACK=10, DBL_AMP=11, DBL_PLUS=12, 
		DBL_MINUS=13, RARROW=14, PHATRARROW=15, LSHIFT=16, SCOPE=17, AT_BANG=18, 
		AT_QUEST=19, AT_PLUS=20, AT_LBRACK=21, AUTOINDEX=22, LBRACK=23, RBRACK=24, 
		LCURLY=25, RCURLY=26, LPAREN=27, RPAREN=28, AT=29, AMP=30, STAR=31, SLASH=32, 
		MOD=33, PLUS=34, MINUS=35, SEMI=36, COLON=37, COMMA=38, POINT=39, EXCL=40, 
		TILDE=41, PIPEPIPE=42, PIPE=43, QM=44, HAT=45, USCORE=46, EQ=47, NEQ=48, 
		LTEQ=49, GTEQ=50, LT=51, GT=52, ASSIGN=53, AS_POW=54, AS_MUL=55, AS_DIV=56, 
		AS_MOD=57, AS_ADD=58, AS_SUB=59, AS_LSH=60, AS_RSH=61, AS_AND=62, AS_OR=63, 
		AS_XOR=64, AUTO=65, VOID=66, BOOL=67, INT=68, UINT=69, ISIZE=70, USIZE=71, 
		BYTE=72, CHAR=73, CODEPOINT=74, STRING=75, HALF=76, FLOAT=77, DOUBLE=78, 
		LONGDOUBLE=79, I64=80, I32=81, I16=82, I8=83, U64=84, U32=85, U16=86, 
		U8=87, B64=88, B32=89, B16=90, B8=91, F80=92, F64=93, F32=94, F16=95, 
		NS=96, VOLATILE=97, STABLE=98, CONST=99, MUTABLE=100, STATIC=101, USING=102, 
		ALIAS=103, UNION=104, STRUCT=105, CLASS=106, CTOR=107, DTOR=108, PUB=109, 
		PRIV=110, PROT=111, FUNC=112, METH=113, ENUM=114, PROP=115, FIELDS=116, 
		FIELD=117, OPERATOR=118, VAR=119, LET=120, FOR=121, TIMES=122, IF=123, 
		ELSE=124, BREAK=125, RETURN=126, SIZEOF=127, NEW=128, DELETE=129, THROW=130, 
		NUL=131, BOOL_LIT=132, ID=133, FLOAT_LIT=134, HEX_LIT=135, INTEGER_LIT=136, 
		NL=137, WS=138;
	public const int
		RULE_postOP = 0, RULE_preOP = 1, RULE_assignOP = 2, RULE_powOP = 3, RULE_multOP = 4, 
		RULE_addOP = 5, RULE_shiftOP = 6, RULE_bitAndOP = 7, RULE_bitXorOP = 8, 
		RULE_bitOrOP = 9, RULE_andOP = 10, RULE_orOP = 11, RULE_memOP = 12, RULE_memPtrOP = 13, 
		RULE_orderOP = 14, RULE_equalOP = 15, RULE_comment = 16, RULE_id = 17, 
		RULE_anyId = 18, RULE_idOrLit = 19, RULE_charType = 20, RULE_floatingType = 21, 
		RULE_binaryType = 22, RULE_integerType = 23, RULE_basicType = 24, RULE_typeQual = 25, 
		RULE_typeQuals = 26, RULE_typePtr = 27, RULE_nestedType = 28, RULE_funcType = 29, 
		RULE_qualType = 30, RULE_qualTypeOrLit = 31, RULE_tplParams = 32, RULE_idTplType = 33, 
		RULE_preOpExpr = 34, RULE_castExpr = 35, RULE_sizeofExpr = 36, RULE_newExpr = 37, 
		RULE_deleteExpr = 38, RULE_namedExpr = 39, RULE_namedExprs = 40, RULE_expr = 41, 
		RULE_exprs = 42, RULE_tt_exp = 43, RULE_idExpr = 44, RULE_typedIdExprs = 45, 
		RULE_attrib = 46, RULE_attribBlk = 47, RULE_stmt = 48, RULE_stmtBlk = 49, 
		RULE_classDef = 50, RULE_classExtDef = 51, RULE_argList = 52, RULE_initList = 53, 
		RULE_param = 54, RULE_params = 55, RULE_ctorDecl = 56, RULE_funcDecl = 57, 
		RULE_opDecl = 58, RULE_topLevel = 59, RULE_prog = 60;
	public static readonly string[] ruleNames = {
		"postOP", "preOP", "assignOP", "powOP", "multOP", "addOP", "shiftOP", 
		"bitAndOP", "bitXorOP", "bitOrOP", "andOP", "orOP", "memOP", "memPtrOP", 
		"orderOP", "equalOP", "comment", "id", "anyId", "idOrLit", "charType", 
		"floatingType", "binaryType", "integerType", "basicType", "typeQual", 
		"typeQuals", "typePtr", "nestedType", "funcType", "qualType", "qualTypeOrLit", 
		"tplParams", "idTplType", "preOpExpr", "castExpr", "sizeofExpr", "newExpr", 
		"deleteExpr", "namedExpr", "namedExprs", "expr", "exprs", "tt_exp", "idExpr", 
		"typedIdExprs", "attrib", "attribBlk", "stmt", "stmtBlk", "classDef", 
		"classExtDef", "argList", "initList", "param", "params", "ctorDecl", "funcDecl", 
		"opDecl", "topLevel", "prog"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'->*'", "'.*'", "'[*]'", "'...'", "'..'", "'[['", 
		"']]'", "'&&'", "'++'", "'--'", "'->'", "'=>'", "'<<'", "'::'", "'@!'", 
		"'@?'", "'@+'", "'@['", null, "'['", "']'", "'{'", "'}'", "'('", "')'", 
		"'@'", "'&'", "'*'", "'/'", "'%'", "'+'", "'-'", "';'", "':'", "','", 
		"'.'", "'!'", "'~'", "'||'", "'|'", "'?'", "'^'", "'_'", "'=='", "'!='", 
		"'<='", "'>='", "'<'", "'>'", "'='", "'**='", "'*='", "'/='", "'%='", 
		"'+='", "'-='", "'<<='", "'>>='", "'&='", "'|='", "'^='", "'auto'", "'void'", 
		"'bool'", "'int'", "'uint'", "'isize'", "'usize'", "'byte'", "'char'", 
		"'codepoint'", "'string'", "'half'", "'float'", "'double'", "'longdouble'", 
		"'i64'", "'i32'", "'i16'", "'i8'", "'u64'", "'u32'", "'u16'", "'u8'", 
		"'b64'", "'b32'", "'b16'", "'b8'", "'f80'", "'f64'", "'f32'", "'f16'", 
		"'namespace'", "'volatile'", "'stable'", "'const'", "'mutable'", "'static'", 
		"'using'", "'alias'", "'union'", "'struct'", "'class'", null, null, null, 
		null, null, null, null, "'enum'", "'prop'", "'fields'", "'field'", "'operator'", 
		"'var'", "'let'", "'for'", "'times'", "'if'", "'else'", "'break'", "'return'", 
		"'sizeof'", "'new'", "'delete'", "'throw'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "COMMENT", "STRING_LIT", "CHAR_LIT", "ARROW_STAR", "DOT_STAR", "PTR_TO_ARY", 
		"TRP_POINT", "DBL_POINT", "DBL_LBRACK", "DBL_RBRACK", "DBL_AMP", "DBL_PLUS", 
		"DBL_MINUS", "RARROW", "PHATRARROW", "LSHIFT", "SCOPE", "AT_BANG", "AT_QUEST", 
		"AT_PLUS", "AT_LBRACK", "AUTOINDEX", "LBRACK", "RBRACK", "LCURLY", "RCURLY", 
		"LPAREN", "RPAREN", "AT", "AMP", "STAR", "SLASH", "MOD", "PLUS", "MINUS", 
		"SEMI", "COLON", "COMMA", "POINT", "EXCL", "TILDE", "PIPEPIPE", "PIPE", 
		"QM", "HAT", "USCORE", "EQ", "NEQ", "LTEQ", "GTEQ", "LT", "GT", "ASSIGN", 
		"AS_POW", "AS_MUL", "AS_DIV", "AS_MOD", "AS_ADD", "AS_SUB", "AS_LSH", 
		"AS_RSH", "AS_AND", "AS_OR", "AS_XOR", "AUTO", "VOID", "BOOL", "INT", 
		"UINT", "ISIZE", "USIZE", "BYTE", "CHAR", "CODEPOINT", "STRING", "HALF", 
		"FLOAT", "DOUBLE", "LONGDOUBLE", "I64", "I32", "I16", "I8", "U64", "U32", 
		"U16", "U8", "B64", "B32", "B16", "B8", "F80", "F64", "F32", "F16", "NS", 
		"VOLATILE", "STABLE", "CONST", "MUTABLE", "STATIC", "USING", "ALIAS", 
		"UNION", "STRUCT", "CLASS", "CTOR", "DTOR", "PUB", "PRIV", "PROT", "FUNC", 
		"METH", "ENUM", "PROP", "FIELDS", "FIELD", "OPERATOR", "VAR", "LET", "FOR", 
		"TIMES", "IF", "ELSE", "BREAK", "RETURN", "SIZEOF", "NEW", "DELETE", "THROW", 
		"NUL", "BOOL_LIT", "ID", "FLOAT_LIT", "HEX_LIT", "INTEGER_LIT", "NL", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MyParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class PostOPContext : ParserRuleContext {
		public PostOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_postOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPostOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PostOPContext postOP() {
		PostOPContext _localctx = new PostOPContext(Context, State);
		EnterRule(_localctx, 0, RULE_postOP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			_la = TokenStream.LA(1);
			if ( !(_la==DBL_PLUS || _la==DBL_MINUS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreOPContext : ParserRuleContext {
		public PreOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreOPContext preOP() {
		PreOPContext _localctx = new PreOPContext(Context, State);
		EnterRule(_localctx, 2, RULE_preOP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DBL_PLUS) | (1L << DBL_MINUS) | (1L << AMP) | (1L << STAR) | (1L << PLUS) | (1L << MINUS) | (1L << EXCL) | (1L << TILDE))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignOPContext : ParserRuleContext {
		public AssignOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignOPContext assignOP() {
		AssignOPContext _localctx = new AssignOPContext(Context, State);
		EnterRule(_localctx, 4, RULE_assignOP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			_la = TokenStream.LA(1);
			if ( !(((((_la - 53)) & ~0x3f) == 0 && ((1L << (_la - 53)) & ((1L << (ASSIGN - 53)) | (1L << (AS_POW - 53)) | (1L << (AS_MUL - 53)) | (1L << (AS_DIV - 53)) | (1L << (AS_MOD - 53)) | (1L << (AS_ADD - 53)) | (1L << (AS_SUB - 53)) | (1L << (AS_LSH - 53)) | (1L << (AS_RSH - 53)) | (1L << (AS_AND - 53)) | (1L << (AS_OR - 53)) | (1L << (AS_XOR - 53)))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PowOPContext : ParserRuleContext {
		public PowOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_powOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPowOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PowOPContext powOP() {
		PowOPContext _localctx = new PowOPContext(Context, State);
		EnterRule(_localctx, 6, RULE_powOP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128; Match(STAR);
			State = 129; Match(STAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MultOPContext : ParserRuleContext {
		public MultOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MultOPContext multOP() {
		MultOPContext _localctx = new MultOPContext(Context, State);
		EnterRule(_localctx, 8, RULE_multOP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STAR) | (1L << SLASH) | (1L << MOD))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AddOPContext : ParserRuleContext {
		public AddOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_addOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AddOPContext addOP() {
		AddOPContext _localctx = new AddOPContext(Context, State);
		EnterRule(_localctx, 10, RULE_addOP);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			_la = TokenStream.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShiftOPContext : ParserRuleContext {
		public ShiftOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shiftOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShiftOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShiftOPContext shiftOP() {
		ShiftOPContext _localctx = new ShiftOPContext(Context, State);
		EnterRule(_localctx, 12, RULE_shiftOP);
		try {
			State = 138;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LSHIFT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 135; Match(LSHIFT);
				}
				break;
			case GT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136; Match(GT);
				State = 137; Match(GT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitAndOPContext : ParserRuleContext {
		public BitAndOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitAndOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitAndOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BitAndOPContext bitAndOP() {
		BitAndOPContext _localctx = new BitAndOPContext(Context, State);
		EnterRule(_localctx, 14, RULE_bitAndOP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140; Match(AMP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitXorOPContext : ParserRuleContext {
		public BitXorOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitXorOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitXorOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BitXorOPContext bitXorOP() {
		BitXorOPContext _localctx = new BitXorOPContext(Context, State);
		EnterRule(_localctx, 16, RULE_bitXorOP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; Match(HAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitOrOPContext : ParserRuleContext {
		public BitOrOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitOrOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitOrOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BitOrOPContext bitOrOP() {
		BitOrOPContext _localctx = new BitOrOPContext(Context, State);
		EnterRule(_localctx, 18, RULE_bitOrOP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(PIPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndOPContext : ParserRuleContext {
		public AndOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndOPContext andOP() {
		AndOPContext _localctx = new AndOPContext(Context, State);
		EnterRule(_localctx, 20, RULE_andOP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(DBL_AMP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrOPContext : ParserRuleContext {
		public OrOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orOP; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrOP(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrOPContext orOP() {
		OrOPContext _localctx = new OrOPContext(Context, State);
		EnterRule(_localctx, 22, RULE_orOP);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148; Match(PIPEPIPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
